# lattice

./: .env.example  .gitignore  .impeccable.md  AGENTS.md  CLAUDE.md  LICENSE  README.md  lattice.config.json  package-lock.json  package.json  vitest.config.ts
.claude/agents/: adapter-builder.md  test-debugger.md
.claude/commands/: build.md  dev.md  test.md
docs/: demo-script.md  setup-openclaw.md
docs/plans/: 2026-03-21-lattice-phase1-relay-server.md  (+13 more)
insights/: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
insights/alembic/: env.py
insights/alembic/versions/: 0001_initial.py
insights/src/insights/: config.py  db.py  main.py  models.py  schemas.py  time_utils.py
insights/src/insights/analytics/: agents.py  cost.py  overview.py  routing.py  timeseries.py
insights/src/insights/api/routers/: __init__.py  agents.py  cost.py  health.py  overview.py  routing.py  timeseries.py
insights/src/insights/ingestion/: backfill.py  handlers.py  orchestrator.py  sse_client.py  writer.py
insights/tests/: conftest.py
insights/tests/e2e/: test_smoke.py
insights/tests/integration/: conftest.py  test_analytics_agents.py  test_analytics_misc.py  test_analytics_overview.py  test_api.py  test_backfill.py  test_migrations.py  test_writer.py
insights/tests/unit/: test_config.py  test_handlers.py  test_sse_parser.py  test_time_utils.py
scripts/: demo-live.sh  demo.sh  insights-up.sh  openclaw-capture.ts  openclaw-probe-send.ts
tests/: smoke.test.ts
workflows/: bug-fix-pipeline.json  bug-triage.json  code-review.json  incident-response.json
(+11 files in other folders)
